ERRORES
Correcciones JsonIgnore y loginTsx